# RLFormerJSP

./: .gitignore  README.md  pyproject.toml
configs/: ppo_10x10.yaml
encoder_weights/: gae_egc_10epochs.pt  gae_gatv2_50epochs.pt
scripts/: train_ppo.py
src/jsp_rl/: env_wrapper.py  jsp_instance.py  rl_env.py  rl_model.py  train_ppo.py
